Bug 476564 - Black square after very first open of combobox
Summary: Black square after very first open of combobox
Status: RESOLVED FIXED
Alias: None
Product: frameworks-qqc2-desktop-style
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.111.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords: qt6, wayland-only
Depends on:
Blocks:
 
Reported: 2023-11-05 01:55 UTC by Piotr Mierzwinski
Modified: 2023-11-10 23:13 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
black combobox (44.20 KB, image/png)
2023-11-10 23:13 UTC, Piotr Mierzwinski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr Mierzwinski 2023-11-05 01:55:38 UTC
SUMMARY
After very first open of ComboBox in any KDE application I get black square. After open it again all is normal and I can see the list of entries.
I tested this in System Settings.

STEPS TO REPRODUCE
1. open System Settings
2. go to Screen Locking
3. click Configure
4. click combobox at "Wallpaper type"

OBSERVED RESULT
black square below "Image"

EXPECTED RESULT
list of entries

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240
Qt Version: 6.6

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2023-11-06 14:40:05 UTC
Confirmed.
Comment 2 Bug Janitor Service 2023-11-07 14:54:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kirigami/-/merge_requests/1366
Comment 3 Arjen Hiemstra 2023-11-08 12:38:20 UTC
Git commit a10aebe34eefce4d1830962c4c6a3fe08e52a7cd by Arjen Hiemstra.
Committed on 08/11/2023 at 13:26.
Pushed by ahiemstra into branch 'master'.

Go back to class method of defining PlatformThemeEvent::type

Apparently `inline static` isn't properly exported, leading to an issue
where it can have multiple definitions. This means that
`PlatformThemeEvent::type` is QEvent::None when used by a plugin,
leading to issues where PlatformTheme is not properly initialized.

M  +11   -0    src/platform/platformtheme.cpp
M  +1    -1    src/platform/platformtheme.h

https://invent.kde.org/frameworks/kirigami/-/commit/a10aebe34eefce4d1830962c4c6a3fe08e52a7cd
Comment 4 Piotr Mierzwinski 2023-11-10 23:13:18 UTC
Created attachment 163027 [details]
black combobox