Go back to class method of defining PlatformThemeEvent::type

Apparently `inline static` isn't properly exported, leading to an issue
where it can have multiple definitions. This means that
`PlatformThemeEvent::type` is QEvent::None when used by a plugin,
leading to issues where PlatformTheme is not properly initialized.

BUG: 476564